syntax = "proto3";
option go_package = "github.com/jaggerzhuang1994/kratos-foundation/proto/kratos_foundation_pb/config_pb";

package kratos_foundation_pb;

import "google/protobuf/duration.proto";
import "config_pb/common.proto";

message Database {
  // gorm 配置
  optional Gorm gorm = 1;
  // logger 配置
  optional ModuleLog log = 2;
  // 默认连接
  optional string default = 3;
  // 连接
  map<string, DBConnection> connections = 4;
  // 链路追踪配置
  optional GormTracing tracing = 5;
  // 监控
  optional GormMetrics metrics = 6;
}

message GormTracing {
  // 禁用 gorm.tracing 插件
  optional bool disable = 1;
  // 排除 db.statement SQL 的变量部分
  optional bool exclude_query_vars = 2;
  // 排除 DBStats 指标被上报
  optional bool exclude_metrics = 3;
  // 在异常事件中包含堆栈追踪
  optional bool record_stack_trace_in_span = 4;
  // 排除 db.server_address 属性
  optional bool exclude_server_address = 5;
}

message GormMetrics {
  // 禁用 gorm.metrics 插件
  optional bool disable = 1;
  // 常量labels
  map<string, string> labels = 2;
  // 刷新间隔 默认15s
  optional google.protobuf.Duration refresh_interval = 3;
  // mysql 插件的配置
  optional Mysql mysql = 4;

  message Mysql {
    // 指标前缀，默认 gorm_status_
    optional string prefix = 1;
    // 间隔 默认 refresh_interval
    optional google.protobuf.Duration interval = 2;
    // 采集哪些指标，默认所有
    repeated string variable_names = 3;
  }
}

message Gorm {
  // 跳过 GORM 默认的“每次写操作自动包一层事务”行为。
  optional bool skip_default_transaction = 1;
  // “显式/默认事务”统一的超时上限
  optional google.protobuf.Duration default_transaction_timeout = 2;
  // 普通 DB 操作（非事务）默认 context 超时
  optional google.protobuf.Duration default_context_timeout = 3;
  // 更新/保存时，是否把关联对象（associations）也“完整保存”（包含更新已有关联）。
  optional bool full_save_associations = 4;
  // gormLogger配置
  optional GormLogger logger = 5;
  // 禁用 GORM 初始化/打开连接时的自动 Ping
  optional bool disable_automatic_ping = 6;
  // AutoMigrate 时不创建外键约束
  optional bool disable_foreign_key_constraint_when_migrating = 7;
  // AutoMigrate 时忽略关系（不处理关联表/关系字段）
  optional bool ignore_relationships_when_migrating = 8;
  // 禁用嵌套事务（GORM 嵌套事务通常通过 savepoint 实现）。
  optional bool disable_nested_transaction = 9;
  // 允许无 WHERE 的全表更新/删除（GORM 默认会拦截）。
  optional bool allow_global_update = 10;
  // select 时倾向显式列（避免 SELECT *），某些场景会根据模型字段生成查询列。
  optional bool query_fields = 11;
  // 批量创建时每批插入的条数（GORM CreateInBatches / Create 的批量行为）。
  optional int32 create_batch_size = 12;
  // 将驱动/数据库错误翻译成 GORM 统一错误（比如重复键、外键错误等），便于业务判断。
  optional bool translate_error = 13;
  // 当你使用 Unscoped() 时，是否把 unscoped 行为传播到关联（association）操作。
  optional bool propagate_unscoped = 14;
}

message GormLogger {
  // 默认 Silent
  optional Level level = 1;
  // gorm 慢日志门限
  optional google.protobuf.Duration slow_threshold = 2;
  // 输出是否彩色
  optional bool colorful = 3;
  // 日志是否忽略record not found错误
  optional bool ignore_record_not_found_error = 4;
  // ParameterizedQueries
  optional bool parameterized_queries = 5;

  enum Level {
    // default to Silent
    UNKNOWN = 0;
    // Silent silent log level
    SILENT = 1;
    // Error error log level
    ERROR = 2;
    // Warn warn log level
    WARN = 3;
    // Info info log level
    INFO = 4;
  }
}

message DBConnection {
  // 数据库驱动，默认mysql
  optional string driver = 1;
  // dsn
  string dsn = 2;
  // 从库
  repeated GormDialector replicas = 3;
  // 自动切换数据源关联表
  repeated string datas = 4;
  // print sources/replicas mode in logger
  optional bool trace_resolver_mode = 5;
  // 用于设置连接池中空闲连接的最大数量
  // 如果 MaxOpenConns > 0，并且 MaxIdleConns 大于 MaxOpenConns，那么 MaxIdleConns 会被自动降低到 MaxOpenConns。
  // 如果 n ≤ 0，则不保留任何空闲连接。
  // 默认的最大空闲连接数目前是 2，这个默认值在未来的 Go 版本中可能会发生变化(sql.defaultMaxIdleConns)。
  optional int32 max_idle_conns = 6;
  // 用于设置数据库最大打开连接数。
  // 如果 MaxIdleConns > 0，并且新的 MaxOpenConns 小于 MaxIdleConns，那么 MaxIdleConns 会被自动降低，以匹配新的 MaxOpenConns 上限。
  // 如果 n ≤ 0，表示不限制打开连接的数量。
  // 默认值是 0，也就是无限制。
  optional int32 max_open_conns = 7;
  // 用于设置单个连接可被重复使用的最长时间。
  // 超过这个时间的连接，在再次被复用之前，可能会被延迟（惰性）关闭，而不是立刻关闭。
  // 如果 d ≤ 0，则不会因为连接使用时间过长而关闭连接（也就是不限制连接的生命周期）。
  // 默认值是 0，也就是无限制。
  optional google.protobuf.Duration conn_max_lifetime = 8;
  // 用于设置连接在空闲状态下允许存在的最长时间。
  // 超过这个空闲时间的连接，在再次被复用之前，可能会被延迟（惰性）关闭，而不是立刻关闭。
  // 如果 d ≤ 0，则不会因为连接空闲时间过长而关闭连接（也就是不限制空闲时长）。
  // 默认值是 0，也就是无限制。
  optional google.protobuf.Duration conn_max_idle_time = 9;
}

// 数据库方言
message GormDialector {
  // 数据库驱动，默认mysql
  optional string driver = 1;
  // dsn
  string dsn = 2;
  // 用于设置连接池中空闲连接的最大数量
  // 如果 MaxOpenConns > 0，并且 MaxIdleConns 大于 MaxOpenConns，那么 MaxIdleConns 会被自动降低到 MaxOpenConns。
  // 如果 n ≤ 0，则不保留任何空闲连接。
  // 默认的最大空闲连接数目前是 2，这个默认值在未来的 Go 版本中可能会发生变化(sql.defaultMaxIdleConns)。
  optional int32 max_idle_conns = 3;
  // 用于设置数据库最大打开连接数。
  // 如果 MaxIdleConns > 0，并且新的 MaxOpenConns 小于 MaxIdleConns，那么 MaxIdleConns 会被自动降低，以匹配新的 MaxOpenConns 上限。
  // 如果 n ≤ 0，表示不限制打开连接的数量。
  // 默认值是 0，也就是无限制。
  optional int32 max_open_conns = 4;
  // 用于设置单个连接可被重复使用的最长时间。
  // 超过这个时间的连接，在再次被复用之前，可能会被延迟（惰性）关闭，而不是立刻关闭。
  // 如果 d ≤ 0，则不会因为连接使用时间过长而关闭连接（也就是不限制连接的生命周期）。
  // 默认值是 0，也就是无限制。
  optional google.protobuf.Duration conn_max_lifetime = 5;
  // 用于设置连接在空闲状态下允许存在的最长时间。
  // 超过这个空闲时间的连接，在再次被复用之前，可能会被延迟（惰性）关闭，而不是立刻关闭。
  // 如果 d ≤ 0，则不会因为连接空闲时间过长而关闭连接（也就是不限制空闲时长）。
  // 默认值是 0，也就是无限制。
  optional google.protobuf.Duration conn_max_idle_time = 6;
}
